--- a/ai_front/public/index.html
+++ b/ai_front/public/index.html
@@ -1,10 +1,9 @@
+<!-- AI_Kaihatsu/ai_front/public/index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AI Directory Selector</title>
+    <title>AI開発システム</title>
   </head>
   <body>
     <div id="root"></div>
